Prevent layout shift

--- a/style.scss
+++ b/style.scss
@@ -76,6 +76,7 @@ main {
 
 	> .avatar {
 		width: 16rem;
+		height: 16rem;
 		border-radius: 50%;
 		box-shadow: 0.2rem 0.2rem 1rem var(--shadow-color);
 	}
